<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ModeActivity"
        android:background="@color/black"
        android:id="@+id/mode_base_layout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_status_text_view"
            android:layout_centerHorizontal="true"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            android:text="@string/select_mode"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mode_buttons_layout"
            android:layout_below="@id/select_status_text_view"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

        <Button
                android:text="@string/first_panel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/first_panel_mode_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/button_bg"
                android:textSize="24sp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="5dp"
                android:onClick="onSelectPanelButtonsClick"/>

        <Button
                android:text="@string/second_panel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/second_panel_mode_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/button_bg"
                android:textSize="24sp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:layout_marginStart="5dp"
                android:onClick="onSelectPanelButtonsClick"/>
    </LinearLayout>

</RelativeLayout>